--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id("com.github.johnrengelman.shadow") version "7.0.0"
     id("io.micronaut.application") version "1.5.3"
     id("org.jetbrains.kotlin.plugin.allopen") version "1.4.32"
+    id("com.google.protobuf") version "0.8.15"
 }
 
 version = "0.1"
@@ -31,6 +32,8 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     runtimeOnly("ch.qos.logback:logback-classic")
     implementation("io.micronaut:micronaut-validation")
+    implementation("org.hibernate:hibernate-validator:6.1.6.Final")
+    implementation("io.micronaut.grpc:micronaut-grpc-client-runtime")
 
     runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
 
@@ -56,5 +59,22 @@ tasks {
         }
     }
 
+    sourceSets {
+        main {
+            java {
+                srcDirs("build/generated/source/proto/main/grpc")
+                srcDirs("build/generated/source/proto/main/java")
+            }
+        }
+    }
 
+    protobuf {
+        protoc { artifact = "com.google.protobuf:protoc:3.17.2" }
+        plugins {
+            grpc { artifact = "io.grpc:protoc-gen-grpc-java:1.38.0" }
+        }
+        generateProtoTasks {
+            all()*.plugins { grpc {} }
+        }
+    }
 }
